# computer-graphics-university

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build.yml
docs/: detailed-design-raw.md
lib/hwy/linux/: libhwy.so.1
lib/sdl2_image/linux/: libSDL2_image-2.0.so.0
resources/: native_bw_15_bit_dithering_rgb_sampling_four_two_one_byterun.cgu  native_bw_24_bit_hsl_sampling_four_two_one_byterun.cgu  native_bw_24_bit_rgb_sampling_four_two_one_byterun.cgu  native_colorful_15_bit_dithering_rgb_sampling_four_two_one_byterun.cgu  native_colorful_24_bit_hsl_sampling_four_two_one_byterun.cgu  native_colorful_24_bit_rgb_sampling_four_two_one_byterun.cgu  palette_bw_15_bit_dithering_rgb_filter_average_sampling_four_two_one_byterun_dct.cgu  palette_bw_24_bit_hsl_filter_average_sampling_four_two_one_byterun_dct.cgu  palette_bw_24_bit_rgb_filter_average_sampling_four_two_one_byterun_dct.cgu  palette_colorful_15_bit_dithering_rgb_filter_average_sampling_four_two_one_byterun_dct.cgu  palette_colorful_24_bit_hsl_filter_average_sampling_four_two_one_byterun_dct.cgu  palette_colorful_24_bit_rgb_filter_average_sampling_four_two_one_byterun_dct.cgu
src/cmd/: main.cpp
src/internal/command/decode/: decode.cpp  decode.hpp
src/internal/command/encode/: encode.cpp  encode.hpp
src/internal/command/handler/: handler.cpp  handler.hpp
src/internal/command/help/: help.cpp  help.hpp
src/internal/command/validator/: validator.cpp  validator.hpp
src/internal/command/view/: view.cpp  view.hpp
src/internal/compressor/: compressor.cpp
src/internal/converter/: converter.cpp  converter.hpp
src/internal/core/command/decode/: decode.cpp  decode.hpp
src/internal/core/command/encode/: encode.cpp  encode.hpp
src/internal/core/command/handler/: handler.cpp  handler.hpp
src/internal/core/command/help/: help.cpp  help.hpp
src/internal/core/command/validator/: validator.cpp  validator.hpp
src/internal/core/command/view/: view.cpp  view.hpp
src/internal/core/io/: io.cpp  io.hpp
src/internal/core/window/: window.cpp  window.hpp
src/internal/io/: io.cpp  io.hpp
src/internal/logger/: logger.cpp  logger.hpp
src/internal/pipeline/: pipeline.cpp  pipeline.hpp
src/internal/processor/: processor.cpp  processor.hpp
src/internal/service/: service.cpp  service.hpp
src/internal/state/: state.cpp  state.hpp
src/internal/tool/: tool.cpp  tool.hpp
src/internal/tools/: tools.cpp  tools.hpp
src/internal/window/: window.cpp  window.hpp
